--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONNECT=mongodb+srv://vesper:AasbUhwkVOLBJqF1@cluster0-a2ylj.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECT=mongodb+srv://vesper94:0xT7KF9ACNyI5UfQ@cluster0-a2ylj.mongodb.net/test?retryWrites=true&w=majority
 
 PORT=4000
