--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "auth",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "ejs-lint": "^1.1.0",
     "nodemon": "^2.0.3"
   }
 }
